# $Id$

2006-10-05	Konstantin V. Arkhipov

	* meta/builders/AutoDaoBuilder.class.php: public constructor's
	generation fixed.

2006-10-04	Konstantin V. Arkhipov

	* core/Base/Assert.class.php: simplified isInteger-checking, succeeds
	on integer's with leading zeros now.

2006-10-02	Konstantin V. Arkhipov

	* meta/builders/SchemaBuilder.class.php: do not generate unsupported
	relations in schema.

2006-09-29	Konstantin V. Arkhipov

	* main/DAOs/GenericDAO.class.php, main/DAOs/StorableDAO.class.php:
	backwards compatibility introduced for 0.2-style pseudo-mappings.

2006-09-28	Konstantin V. Arkhipov

	* main/Base/ObjectsTree.class.php: ressurected.

2006-09-27	Konstantin V. Arkhipov

	* meta/: 'source link' support in DAO's implemented.

	* core/DB/DBPool.class.php: new way for handling multi-DB's projects.

2006-09-26	Konstantin V. Arkhipov

	* meta/builders/SchemaBuilder.class.php: handling of property-less
	classes fixed too.

	* meta/builders/AutoDaoBuilder.class.php: fixed bug with inherited
	property-less DAO's.

2006-09-25	Konstantin V. Arkhipov

	* meta/builders/ProtoClassBuilder.class.php: corrected handling of
	parent's identifiers (if any).

	* meta/builders/ProtoClassBuilder.class.php: inheritance support
	implemented, useless constructor and private property dropped.

	* core/OSQL/TruncateQuery.class.php,
	test/core/TruncateQueryTest.class.php: single table handling fixed,
	test updated.

	* meta/classes/MetaClass.class.php: try to resolve parent's identifier
	in cases where child doesn't own one.

2006-09-24	Konstantin V. Arkhipov

	* main/DAOs/FullTextDAO.class.php: is now interface-helper for
	introduced FullTextUtils.

	* main/DAOs/MappedDAO.class.php,
	main/DAOs/MappedStorableDAO.class.php: dropped, since all Storable's
	childs are now Mapped too.

	* main/Base/Credentials.class.php: dropped.

	* FinalNamedObjectDAO.class.php, NamedObjectDAO.class.php: useless
	classes dropped.

	* main/DAOs/FinalObjectsTreeDAO.class.php,