@@ -1,20 +1,0 @@
-<?php
-/***************************************************************************
- *   Copyright (C) 2006 by Konstantin V. Arkhipov                          *
- *                                                                         *
- *   This program is free software; you can redistribute it and/or modify  *
- *   it under the terms of the GNU General Public License as published by  *
- *   the Free Software Foundation; either version 2 of the License, or     *
- *   (at your option) any later version.                                   *
- *                                                                         *
- ***************************************************************************/
-/* $Id$ */
-
-	/**
-	 * @deprecated useless constraint on constructor args
-	**/
-	interface FilterController extends Controller
-	{
-		public function __construct(Controller $controller);
-	}
-?>
