@@ -1,5 +1,9 @@
 # $Id$
 
+2006-10-05	Anton E. Lebedevich
+
+	* main/Flow/FilterController.class.php: removed.
+
 2006-10-05	Konstantin V. Arkhipov
 
 	* meta/builders/AutoDaoBuilder.class.php: public constructor's
